--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,9 @@
     "method-override": "^3.0.0",
     "mocha": "^10.2.0",
     "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "session": "^0.1.0",
     "startbootstrap-sb-admin-2": "^4.1.4"
   }
