--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     "routes": [
       {
         "src": "/(.*)",
+        "dest": "/"
+      },
+      {
+        "src": "/admin",
         "dest": "/admin"
       }
     ]
