--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai-http": "^4.3.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "debug": "^4.3.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
